Updated page Package Metadata

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -94,7 +94,9 @@
 <p><b>Backwards-compatibility note</b>: The Addon Manager will attempt to normalize license identifiers that do not exactly match an SPDX license string. This will sometimes result in a license ID that yields a non-FSF-Libre or non-OSI-approved license: for example "LGPL2" will be normalized to "LGPL-2.0", which is a non-FSF-Libre license: what was probably intended was "LGPL-2.1-or-later".
 </p>
 <h4><span class="mw-headline" id="Attributes_3">Attributes</span></h4>
-<ul><li><code>file = "FILE"</code> (optional): A path relative to the <code>package.xml</code> file containing the full license text. Many licenses require including the license text when redistributing the software. E.g. the Apache License, Version 2.0 states in paragraph 4.1: "You must give any other recipients of the Work or Derivative Works a copy of this License"</li></ul>
+<ul><li>file="FILE" (optional): A path relative to the <code>package.xml</code> file containing the full license text. Many licenses require including the license text when redistributing the software. E.g. the Apache License, Version 2.0 states in paragraph 4.1: "You must give any other recipients of the Work or Derivative Works a copy of this License"</li></ul>
+<p><br>
+</p>
 <h3><span id=".3Ccontent.3E"></span><span class="mw-headline" id="&lt;content&gt;">&lt;content&gt;</span></h3>
 <p>REQUIRED
 </p><p>The &lt;content&gt; tag describes the actual contents of the package. It has no attributes, and contains any number of children. Those children can have arbitrary tag names, only some of which may be recognized by FreeCAD. FreeCAD currently supports "workbench", "macro", "preferencepack", "bundle" (<span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>), and "other" (<span style="font-size:small;"><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>) elements. Each child is then defined recursively by this standard, containing any or all of the elements allowed for the root &lt;package&gt; node. For example:
@@ -362,33 +364,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117213044
+Cached time: 20260117213838
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
+CPU time usage: 0.098 seconds
 Real time usage: 0.104 seconds
-Preprocessor visited node count: 638/1000000
-Post&#8208;expand include size: 7122/2097152 bytes
-Template argument size: 2537/2097152 bytes
+Preprocessor visited node count: 629/1000000
+Post&#8208;expand include size: 7063/2097152 bytes
+Template argument size: 2491/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8585/5000000 bytes
+Unstrip post&#8208;expand size: 8584/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.650      1 -total
- 20.23%    3.571      1 Template:TOCright
- 17.97%    3.171      1 Template:Powerdocnavi
- 17.63%    3.112     38 Template:Incode
- 12.31%    2.172      1 Template:Navigation_menu_2
- 10.44%    1.843      3 Template:Version
-  9.34%    1.649      1 Template:Code
-  6.23%    1.100      1 Template:MenuCommand
+100.00%   16.830      1 -total
+ 25.87%    4.354      1 Template:Powerdocnavi
+ 15.83%    2.663     37 Template:Incode
+ 13.71%    2.308      1 Template:Navigation_menu_2
+  9.96%    1.676      1 Template:Code
+  9.80%    1.649      1 Template:MenuCommand
+  8.84%    1.488      3 Template:Version
+  6.76%    1.137      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117213045 and revision id 1739679. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117213839 and revision id 1739680. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
