--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -12,23 +12,23 @@
 <h2><span class="mw-headline" id="Overall_file_format">Overall file format</span></h2>
 <p>This document currently describes file format version 1.
 </p><p>The original format and contents of this page were based on <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
-</p><p>The metadata file must be a valid, well-formed XML 1.0 document. It must be called <code>package.xml</code> , and must exist in the base directory of each of the software package's displayed branches (as specified by the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/blob/master/AddonCatalog.json">FreeCAD-addons AddonCatalog.json file</a>) in its git repository. Each branch is expected to contain an independent package.xml file that pertains specifically to that branch (e.g. a "development" branch should specify a version number that makes it clear it is a development branch, etc.). All understood XML tags are in lowercase, but unrecognized tags are <b>not</b> an error. Most tags are optional, and some only apply to certain types of package contents (for example, only Workbenches currently provide a "classname" element). Unneeded or unrecognized elements are ignored.
+</p><p>The metadata file must be a valid, well-formed XML 1.0 document. It must be called "package.xml", and must exist in the base directory of each of the software package's displayed branches (as specified by the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons/blob/master/AddonCatalog.json">FreeCAD-addons AddonCatalog.json file</a>) in its git repository. Each branch is expected to contain an independent package.xml file that pertains specifically to that branch (e.g. a "development" branch should specify a version number that makes it clear it is a development branch, etc.). All understood XML tags are in lowercase, but unrecognized tags are <b>not</b> an error. Most tags are optional, and some only apply to certain types of package contents (for example, only Workbenches currently provide a "classname" element). Unneeded or unrecognized elements are ignored.
 </p><p>Any file path specified in package.xml must use the slash ("/") as the directory separator: on systems that expect a different separator during execution (e.g. Windows) FreeCAD will automatically convert to the correct separator.
 </p>
 <h2><span class="mw-headline" id="Tags">Tags</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
-<p>The <code>&lt;package&gt;</code> tag is the only top-level element allowed in the manifest and there can only be one. All other tags and their contents are nested within it.
+<p>The &lt;package&gt; tag is the only top-level element allowed in the manifest and there can only be one. All other tags and their contents are nested within it.
 </p>
 <div class="mw-highlight mw-highlight-lang-xml mw-content-ltr" dir="ltr"><pre><span></span><span class="nt">&lt;package</span><span class="w"> </span>
-<span class="w">    </span><span class="na">format =</span><span class="w"> </span><span class="s">'1'</span>
-<span class="w">    </span><span class="na">xmlns =</span><span class="w"> </span><span class="s">'https://wiki.freecad.org/Package_Metadata'</span>
+<span class="w">    </span><span class="na">format=</span><span class="s">"1"</span>
+<span class="w">    </span><span class="na">xmlns=</span><span class="s">"https://wiki.freecad.org/Package_Metadata"</span>
 <span class="nt">&gt;</span>
 </pre></div>
 <h4><span class="mw-headline" id="Attributes">Attributes</span></h4>
-<ul><li><code>format = '&lt;Version&gt;'</code>&nbsp;: Specifies the version of the format being used, currently only version <code>1</code> exists.</li>
-<li><code>xmlns = '&lt;Namespace&gt;'</code>&nbsp;: Specifies the XML namespace being used. Must be set to <code><a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a></code> .</li></ul>
+<ul><li>format="&lt;Version&gt;": Specifies the version of the format being used, currently only version "1" exists.</li>
+<li>xmlns="&lt;Namespace&gt;": Specifies the XML namespace being used. Must be set to "<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>".</li></ul>
 <h4><span class="mw-headline" id="Required_Tags">Required Tags</span></h4>
-<p>The following tags must be present in the  <code>&lt;package&gt;</code> element:
+<p>The following tags must be present in the &lt;package&gt; element:
 </p>
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
@@ -362,33 +362,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117214013
+Cached time: 20260117215112
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.121 seconds
 Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 7063/2097152 bytes
 Template argument size: 2491/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8584/5000000 bytes
+Unstrip post&#8208;expand size: 8538/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.836      1 -total
- 41.93%    7.898      1 Template:Powerdocnavi
- 19.16%    3.610      1 Template:Navigation_menu_2
- 11.49%    2.164     37 Template:Incode
-  8.85%    1.667      3 Template:Version
-  8.19%    1.542      1 Template:Code
-  7.09%    1.335      1 Template:TOCright
-  6.64%    1.250      1 Template:MenuCommand
+100.00%   21.654      1 -total
+ 19.77%    4.280      1 Template:Powerdocnavi
+ 18.82%    4.074     37 Template:Incode
+ 13.76%    2.980      3 Template:Version
+ 12.36%    2.677      1 Template:Code
+ 10.86%    2.352      1 Template:Navigation_menu_2
+ 10.07%    2.181      1 Template:MenuCommand
+  8.92%    1.932      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117214016 and revision id 1739681. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215110 and revision id 1739682. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
