--- a/wiki/de/Sketcher_Translate.html
+++ b/wiki/de/Sketcher_Translate.html
@@ -141,12 +141,12 @@ Dim-OVP = Dimensional On-View-Parameters (In-Ansicht-Parameter zur ma&szlig;lich
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251019090059
+Cached time: 20260117215351
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.215 seconds
 Preprocessor visited node count: 231/1000000
 Post&#8208;expand include size: 23672/2097152 bytes
 Template argument size: 8938/2097152 bytes
@@ -157,18 +157,18 @@ Unstrip post&#8208;expand size: 1791/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.798      1 -total
- 23.57%    2.545      1 Template:Sketcher_Tools_navi/de
- 22.74%    2.455      1 Template:GuiCommand/de
- 19.67%    2.124      2 Template:Docnav/de
- 12.62%    1.363      1 Template:Userdocnavi/de
-  8.44%    0.911      2 Template:Navigation_menu_2
-  8.09%    0.874      6 Template:KEY
-  6.98%    0.754      1 Template:Button
-  6.98%    0.754      2 Template:MenuCommand
+100.00%   56.986      1 -total
+ 40.22%   22.917      1 Template:Sketcher_Tools_navi/de
+ 19.96%   11.377      2 Template:Navigation_menu_2
+ 10.43%    5.944      1 Template:Button
+  9.64%    5.494      1 Template:GuiCommand/de
+  9.30%    5.300      2 Template:MenuCommand
+  5.89%    3.356      2 Template:Docnav/de
+  5.85%    3.335      1 Template:Userdocnavi/de
+  5.48%    3.122      6 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343847-0!canonical and timestamp 20251019090059 and revision id 1667700. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343847-0!canonical and timestamp 20260117215351 and revision id 1667700. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
