--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -25,8 +25,8 @@
 <span class="nt">&gt;</span>
 </pre></div>
 <h4><span class="mw-headline" id="Attributes">Attributes</span></h4>
-<ul><li>format="&lt;Version&gt;": Specifies the version of the format being used, currently only version "1" exists.</li>
-<li>xmlns="&lt;Namespace&gt;": Specifies the XML namespace being used. Must be set to "<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>".</li></ul>
+<ul><li>format="NUMBER": Specifies the version of the format being used, currently only version "1" exists.</li>
+<li>xmlns="NAMESPACE": Specifies the XML namespace being used. Must be set to "<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>".</li></ul>
 <h4><span class="mw-headline" id="Required_Tags">Required Tags</span></h4>
 <p>The following tags must be present in the &lt;package&gt; element:
 </p>
@@ -362,12 +362,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215258
+Cached time: 20260117215437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.466 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.145 seconds
 Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 7063/2097152 bytes
 Template argument size: 2489/2097152 bytes
@@ -378,17 +378,17 @@ Unstrip post&#8208;expand size: 8536/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  268.566      1 -total
- 94.24%  253.093      1 Template:Code
-  1.88%    5.054      1 Template:Powerdocnavi
-  0.90%    2.409     37 Template:Incode
-  0.74%    1.983      1 Template:Navigation_menu_2
-  0.70%    1.888      1 Template:MenuCommand
-  0.65%    1.751      1 Template:TOCright
-  0.39%    1.059      3 Template:Version
+100.00%   14.074      1 -total
+ 26.35%    3.709      1 Template:Powerdocnavi
+ 15.78%    2.222     37 Template:Incode
+ 13.51%    1.901      1 Template:Navigation_menu_2
+ 11.77%    1.657      3 Template:Version
+ 10.58%    1.489      1 Template:Code
+  7.85%    1.105      1 Template:TOCright
+  7.85%    1.105      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215258 and revision id 1739683. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215437 and revision id 1739685. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
