--- a/wiki/de/Sketcher_Translate.html
+++ b/wiki/de/Sketcher_Translate.html
@@ -56,7 +56,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Sketcher_Translate.svg&amp;filetimestamp=20240222145016&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Translate.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Translate.html" title="Sketcher Translate">Sketcher LinearAnordnen</a> versetzt ausgew&auml;hlte elemente oder erstellt wahlweise Kopien und verteilt sie gleichm&auml;&szlig;ig entlang einer oder zweier Richtungen.
+<p>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Sketcher_Translate.svg&amp;filetimestamp=20240222145016&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Translate.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sketcher LinearAnordnen</a> versetzt ausgew&auml;hlte Elemente oder erstellt wahlweise Kopien und verteilt sie gleichm&auml;&szlig;ig entlang einer oder zweier Richtungen.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -141,12 +141,12 @@ Dim-OVP = Dimensional On-View-Parameters (In-Ansicht-Parameter zur ma&szlig;lich
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215351
+Cached time: 20260117215507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.215 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.304 seconds
 Preprocessor visited node count: 231/1000000
 Post&#8208;expand include size: 23672/2097152 bytes
 Template argument size: 8938/2097152 bytes
@@ -157,18 +157,18 @@ Unstrip post&#8208;expand size: 1791/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.986      1 -total
- 40.22%   22.917      1 Template:Sketcher_Tools_navi/de
- 19.96%   11.377      2 Template:Navigation_menu_2
- 10.43%    5.944      1 Template:Button
-  9.64%    5.494      1 Template:GuiCommand/de
-  9.30%    5.300      2 Template:MenuCommand
-  5.89%    3.356      2 Template:Docnav/de
-  5.85%    3.335      1 Template:Userdocnavi/de
-  5.48%    3.122      6 Template:KEY
+100.00%   48.804      1 -total
+ 30.05%   14.664      1 Template:GuiCommand/de
+ 23.76%   11.595      1 Template:Sketcher_Tools_navi/de
+ 13.96%    6.811      2 Template:Docnav/de
+ 11.26%    5.496      2 Template:Navigation_menu_2
+ 11.15%    5.443      1 Template:Userdocnavi/de
+  9.48%    4.628      6 Template:KEY
+  8.21%    4.007      1 Template:Button
+  6.72%    3.277      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343847-0!canonical and timestamp 20260117215351 and revision id 1667700. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343847-0!canonical and timestamp 20260117215507 and revision id 1739687. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
