Updated page Package Metadata

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -7,7 +7,7 @@
 <li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
-<p>Beginning in FreeCAD v0.20 addons should be distributed with a manifest file describing their contents. FreeCAD uses this metadata to determine what resources to load and what dependencies to install upon other things. It also provides information used to display your addon in the Addon Manager.
+<p>Beginning in FreeCAD v0.20 addons should be distributed with a manifest file describing their contents. FreeCAD uses this metadata to determine what resources to load and what dependencies to install upon other things. The file also provides information used to display your addon in the Addon Manager.
 </p>
 <h2><span class="mw-headline" id="Overall_file_format">Overall file format</span></h2>
 <p>This document currently describes file format version 1.
@@ -362,12 +362,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215437
+Cached time: 20260117215733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 7063/2097152 bytes
 Template argument size: 2489/2097152 bytes
@@ -378,17 +378,17 @@ Unstrip post&#8208;expand size: 8536/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.074      1 -total
- 26.35%    3.709      1 Template:Powerdocnavi
- 15.78%    2.222     37 Template:Incode
- 13.51%    1.901      1 Template:Navigation_menu_2
- 11.77%    1.657      3 Template:Version
- 10.58%    1.489      1 Template:Code
-  7.85%    1.105      1 Template:TOCright
-  7.85%    1.105      1 Template:MenuCommand
+100.00%   31.511      1 -total
+ 44.66%   14.074      1 Template:Powerdocnavi
+ 16.96%    5.345      1 Template:Navigation_menu_2
+ 13.79%    4.344      1 Template:Code
+ 10.87%    3.426      1 Template:TOCright
+  8.74%    2.754      3 Template:Version
+  7.57%    2.386     37 Template:Incode
+  4.40%    1.387      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215437 and revision id 1739685. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215735 and revision id 1739688. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
