--- a/wiki/de/Sketcher_Rotate.html
+++ b/wiki/de/Sketcher_Rotate.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Sketcher_Rotate.svg&amp;filetimestamp=20240101115504&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Rotate.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sketcher Schwenken</a> versetzt ausgew&auml;hlte elemente oder erstellt wahlweise Kopien und verteilt sie gleichm&auml;&szlig;ig &uuml;ber einen Schwenkwinkel.
+<p>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Sketcher_Rotate.svg&amp;filetimestamp=20240101115504&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Rotate.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sketcher Schwenken</a> versetzt ausgew&auml;hlte Elemente oder erstellt wahlweise Kopien und verteilt sie gleichm&auml;&szlig;ig &uuml;ber einen Schwenkwinkel.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -128,12 +128,12 @@ Dim-OVP = Dimensional On-View-Parameters (In-Ansicht-Parameter zur ma&szlig;lich
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215744
+Cached time: 20260117215824
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.106 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 236/1000000
 Post&#8208;expand include size: 24023/2097152 bytes
 Template argument size: 9375/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1602/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.945      1 -total
- 33.36%    5.319      1 Template:Sketcher_Tools_navi/de
- 24.03%    3.831      1 Template:GuiCommand/de
- 14.99%    2.390      2 Template:Navigation_menu_2
- 14.04%    2.239      2 Template:Docnav/de
- 11.00%    1.754      1 Template:Userdocnavi/de
-  8.43%    1.344      6 Template:KEY
-  6.21%    0.990      2 Template:MenuCommand
-  5.83%    0.930      1 Template:Button
+100.00%   26.978      1 -total
+ 28.24%    7.619      1 Template:GuiCommand/de
+ 21.11%    5.694      1 Template:Sketcher_Tools_navi/de
+ 14.23%    3.840      2 Template:MenuCommand
+ 11.88%    3.206      1 Template:Userdocnavi/de
+ 11.62%    3.135      1 Template:Button
+  9.35%    2.522      2 Template:Docnav/de
+  9.07%    2.448      6 Template:KEY
+  8.61%    2.324      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332087-0!canonical and timestamp 20260117215744 and revision id 1668990. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332087-0!canonical and timestamp 20260117215824 and revision id 1739690. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
