--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (90% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141803
+Cached time: 20260117215848
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.405 seconds
-Real time usage: 0.478 seconds
+CPU time usage: 0.332 seconds
+Real time usage: 0.394 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  244.322      1 -total
-  3.17%    7.737      1 Template:Draft_Tools_navi
-  2.77%    6.772     10 Template:Code
-  2.47%    6.045      2 Template:Navigation_menu_2
-  2.07%    5.056      6 Template:SpinBox
-  1.76%    4.304      7 Template:RadioButton
-  1.73%    4.237      3 Template:ColoredText
-  1.47%    3.588      1 Template:Userdocnavi
-  1.33%    3.248      1 Template:Macro
-  1.26%    3.087     10 Template:CheckBox
+100.00%  187.741      1 -total
+  3.79%    7.117      1 Template:Draft_Tools_navi
+  2.46%    4.626      2 Template:Navigation_menu_2
+  2.14%    4.014      3 Template:ColoredText
+  1.93%    3.622      7 Template:RadioButton
+  1.90%    3.575     10 Template:CheckBox
+  1.90%    3.570      6 Template:SpinBox
+  1.79%    3.351     10 Template:Code
+  1.64%    3.079      1 Template:Userdocnavi
+  1.56%    2.929      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260117141816 and revision id 1739543. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260117215848 and revision id 1739543. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
