--- a/wiki/de/Sketcher_Scale.html
+++ b/wiki/de/Sketcher_Scale.html
@@ -7,7 +7,7 @@
 <li><a href="../ru/Sketcher_Scale.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1052;&#1072;&#1089;&#1096;&#1090;&#1072;&#1073;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Scale.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#12473;&#12465;&#12540;&#12523;&#22793;&#25563; (10% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Rotate.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_Rotate.html" title="Sketcher Rotate">Schwenken/Polare Transformation</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Rotate.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_Rotate.html" title="Sketcher Rotate/de">Schwenken/Polare Transformation</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Offset.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_Offset.html" title="Sketcher Offset/de">Versatz</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/Sketcher_Workbench.html" title="Sketcher Workbench/de">Sketcher</a>
@@ -79,7 +79,7 @@ Dim-OVP = Dimensional On-View-Parameters (In-Ansicht-Parameter zur ma&szlig;lich
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Rotate.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_Rotate.html" title="Sketcher Rotate">Schwenken/Polare Transformation</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Rotate.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_Rotate.html" title="Sketcher Rotate/de">Schwenken/Polare Transformation</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_Offset.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/Sketcher_Offset.html" title="Sketcher Offset/de">Versatz</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/Sketcher_Workbench.html" title="Sketcher Workbench/de">Sketcher</a>
@@ -120,15 +120,15 @@ Dim-OVP = Dimensional On-View-Parameters (In-Ansicht-Parameter zur ma&szlig;lich
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251103060004
+Cached time: 20260117215921
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.152 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.160 seconds
 Preprocessor visited node count: 215/1000000
-Post&#8208;expand include size: 24873/2097152 bytes
-Template argument size: 9913/2097152 bytes
+Post&#8208;expand include size: 24891/2097152 bytes
+Template argument size: 9925/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -136,18 +136,18 @@ Unstrip post&#8208;expand size: 1580/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.335      1 -total
- 29.40%    5.097      1 Template:Sketcher_Tools_navi/de
- 26.21%    4.543      1 Template:GuiCommand/de
- 15.62%    2.708      2 Template:Docnav/de
- 13.50%    2.341      1 Template:Userdocnavi/de
-  9.01%    1.562      2 Template:Navigation_menu_2
-  6.62%    1.148      7 Template:KEY
-  5.24%    0.909      2 Template:MenuCommand
-  5.22%    0.904      1 Template:Button
+100.00%   28.431      1 -total
+ 23.12%    6.572      1 Template:Sketcher_Tools_navi/de
+ 22.22%    6.319      1 Template:GuiCommand/de
+ 13.71%    3.899      2 Template:MenuCommand
+ 12.82%    3.645      2 Template:Docnav/de
+ 12.06%    3.428      1 Template:Userdocnavi/de
+ 10.13%    2.881      2 Template:Navigation_menu_2
+ 10.07%    2.863      1 Template:Button
+  9.59%    2.727      7 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343918-0!canonical and timestamp 20251103060004 and revision id 1680572. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:343918-0!canonical and timestamp 20260117215921 and revision id 1739701. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
