--- a/wiki/Macro_WorkFeatures.html
+++ b/wiki/Macro_WorkFeatures.html
@@ -208,7 +208,7 @@ Macro WorkFeatures
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span>&nbsp;: Second, one cutting Line and click 'Select Cut Line' button,
 <ul><li>The name of the line selected are displayed</li></ul></li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span>&nbsp;: Last, a reference Plane and click 'Select Ref. Plane' button!
-<ul><li>The name of the selected plane are displayed</li></ul></li>
+<ul><li>The name of the selected plane is displayed</li></ul></li>
 <li><b>Angle</b>&nbsp;: Angle for cut (Default&nbsp;: 0.0)</li>
 <li><b>Thichness</b>&nbsp;: Thickness the cut (Default&nbsp;: 0.0)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;: Reset the values</li>
@@ -426,12 +426,12 @@ Thickness is the wide of the of the cutting Plane.
 
 <!-- 
 NewPP limit report
-Cached time: 20260117220117
+Cached time: 20260117220323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.139 seconds
+Real time usage: 0.176 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 25175/2097152 bytes
 Template argument size: 2942/2097152 bytes
@@ -442,18 +442,18 @@ Unstrip post&#8208;expand size: 21251/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.560      1 -total
-  5.69%    4.128     11 Template:Clear
-  5.28%    3.833      1 Template:Userdocnavi
-  5.08%    3.689     54 Template:KEY
-  4.24%    3.076      1 Template:Macro
-  3.41%    2.477      1 Template:Navigation_menu_2
-  2.65%    1.926      1 Template:Caption
-  1.76%    1.280      1 Template:MenuCommand
-  1.53%    1.107      1 Template:Button
+100.00%   59.204      1 -total
+  5.13%    3.039      1 Template:Userdocnavi
+  4.02%    2.378     54 Template:KEY
+  3.18%    1.880      1 Template:Macro
+  3.18%    1.880      1 Template:Navigation_menu_2
+  2.07%    1.226     11 Template:Clear
+  1.84%    1.091      1 Template:Caption
+  1.75%    1.036      1 Template:Button
+  1.51%    0.892      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260117220137 and revision id 1739702. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260117220323 and revision id 1739703. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
