--- a/wiki/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/Macro_FCSpring_Helix_Variable.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FCFeder-Helix-Variable (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FCFeder-Helix-Variable (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -466,35 +466,35 @@ ToolBar button </p><figure class="mw-default-size mw-halign-left" typeof="mw:Fil
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116044716
+Cached time: 20260117220450
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.195 seconds
-Real time usage: 0.212 seconds
+CPU time usage: 0.203 seconds
+Real time usage: 0.542 seconds
 Preprocessor visited node count: 1022/1000000
 Post&#8208;expand include size: 24424/2097152 bytes
 Template argument size: 4566/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28475/5000000 bytes
+Unstrip post&#8208;expand size: 28480/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.764      1 -total
-  5.96%    4.036      6 Template:Code
-  3.11%    2.107      1 Template:Codeextralink
-  2.93%    1.986      8 Template:CheckBox
-  2.68%    1.817     12 Template:SpinBox
-  2.59%    1.757      1 Template:Macro
-  2.20%    1.494      1 Template:Caption
-  2.06%    1.399     25 Template:Button
-  1.83%    1.242      2 Template:RadioButton
-  1.69%    1.147     14 Template:Clear
+100.00%  203.192      1 -total
+  5.65%   11.483      1 Template:KEY
+  5.50%   11.172     12 Template:SpinBox
+  5.15%   10.461      6 Template:Code
+  3.53%    7.177      8 Template:CheckBox
+  2.75%    5.591      1 Template:Codeextralink
+  2.49%    5.064     25 Template:Button
+  1.72%    3.498     14 Template:Clear
+  1.71%    3.469      1 Template:Macro
+  1.64%    3.330      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20260116044730 and revision id 1739021. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20260117220450 and revision id 1739021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
