--- a/wiki/Release_notes_1.1.html
+++ b/wiki/Release_notes_1.1.html
@@ -515,12 +515,12 @@
 <li>The alignment of sketches in SVG export and legacy DXF export has been fixed. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260117220635
+Cached time: 20260117220706
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.337 seconds
-Real time usage: 0.392 seconds
+CPU time usage: 0.338 seconds
+Real time usage: 0.639 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 3528/2097152 bytes
 Template argument size: 533/2097152 bytes
@@ -531,19 +531,19 @@ Unstrip post&#8208;expand size: 1570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.853      1 -total
- 22.31%    3.314      2 Template:PropertyData
- 17.07%    2.535      1 Template:VeryImportantMessage
- 14.77%    2.194      2 Template:Message
- 13.00%    1.930      2 Template:Variable
-  9.94%    1.477      1 Template:VersionPlus
-  8.87%    1.317      1 Template:VersionMinus
-  6.54%    0.972      1 Template:Incode
-  6.35%    0.943      5 Template:KEY
-  5.91%    0.878      2 Template:FileName
+100.00%   43.844      1 -total
+ 50.89%   22.312      1 Template:VeryImportantMessage
+ 10.20%    4.470      2 Template:PropertyData
+  9.25%    4.057      1 Template:VersionMinus
+  8.39%    3.679      2 Template:Message
+  7.26%    3.182      1 Template:VersionPlus
+  5.18%    2.273      2 Template:Variable
+  4.23%    1.854      1 Template:Incode
+  3.57%    1.565      5 Template:KEY
+  3.29%    1.441      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260117220643 and revision id 1739730. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260117220706 and revision id 1739730. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
