--- a/wiki/PartDesign_SubtractivePipe.html
+++ b/wiki/PartDesign_SubtractivePipe.html
@@ -116,7 +116,7 @@
 <li>A cross-section cannot lie on the same plane as the one immediately preceding it.</li>
 <li>The cross-sections must not contain disjoint or crossing loops.</li>
 <li>If the sketch has inner geometry, then the order in which the sketch geometry is created should be the same for all sections. Either start all sections with the inner geometry, or start them all with the outer. Otherwise an invalid pipe will be created where inner and outer walls cross.</li>
-<li>The error message "A fatal error occurred when making the pipe" may indicate one of these requirements were not met, and will lead you to this list.</li></ul>
+<li>The error message "A fatal error occurred when making the pipe" may indicate one of these requirements has not been met.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -159,12 +159,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117200256
+Cached time: 20260117220809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.138 seconds
 Preprocessor visited node count: 900/1000000
 Post&#8208;expand include size: 20128/2097152 bytes
 Template argument size: 6259/2097152 bytes
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 2276/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.452      1 -total
- 27.95%    5.157     10 Template:PropertyData
- 21.40%    3.949      1 Template:PartDesign_Tools_navi
- 19.77%    3.648     10 Template:Variable
- 16.17%    2.984      2 Template:Navigation_menu_2
- 11.37%    2.097      1 Template:Userdocnavi
-  9.14%    1.686      1 Template:GuiCommand
-  9.06%    1.672      2 Template:Docnav
-  5.33%    0.984      6 Template:Button
-  5.14%    0.948      5 Template:Emphasis
+100.00%   21.077      1 -total
+ 25.49%    5.373     10 Template:PropertyData
+ 22.03%    4.643      1 Template:PartDesign_Tools_navi
+ 17.29%    3.645     10 Template:Variable
+ 16.22%    3.418      2 Template:Navigation_menu_2
+ 10.35%    2.182      1 Template:Userdocnavi
+  8.60%    1.813      1 Template:GuiCommand
+  8.45%    1.780      2 Template:Docnav
+  7.56%    1.594      5 Template:Emphasis
+  6.51%    1.372      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:81692-0!canonical and timestamp 20260117200318 and revision id 1739632. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:81692-0!canonical and timestamp 20260117220815 and revision id 1739739. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
