--- a/wiki/it/Animation_Workbench.html
+++ b/wiki/it/Animation_Workbench.html
@@ -110,12 +110,12 @@
 <li><a href="../it/External_workbenches.html" title="External workbenches/it">Ambienti complementari</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113123323
+Cached time: 20260118040004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.159 seconds
+CPU time usage: 0.171 seconds
+Real time usage: 0.340 seconds
 Preprocessor visited node count: 90/1000000
 Post&#8208;expand include size: 533/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -126,11 +126,11 @@ Unstrip post&#8208;expand size: 1554/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.141      1 Template:UnfinishedDocu
-100.00%    2.141      1 -total
+100.00%    3.442      1 Template:UnfinishedDocu
+100.00%    3.442      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149113-0!canonical and timestamp 20260113123322 and revision id 1737834. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:149113-0!canonical and timestamp 20260118040004 and revision id 1737834. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
