Updated page Fasteners ScrewCalculator/it

--- a/wiki/it/Fasteners_ScrewCalculator.html
+++ b/wiki/it/Fasteners_ScrewCalculator.html
@@ -85,12 +85,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123913
+Cached time: 20260118041520
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.085 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 195/1000000
 Post&#8208;expand include size: 7533/2097152 bytes
 Template argument size: 1749/2097152 bytes
@@ -101,17 +101,17 @@ Unstrip post&#8208;expand size: 1522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.835      1 -total
- 32.09%    5.402      1 Template:Fasteners_Tools_navi/it
- 18.05%    3.038      2 Template:Docnav/it
- 16.03%    2.699      1 Template:GuiCommand/it
- 11.36%    1.913      5 Template:MenuCommand
- 10.57%    1.779      1 Template:Navigation_menu_2
-  9.62%    1.620      1 Template:Caption
-  8.83%    1.487      2 Template:Button
+100.00%   14.352      1 -total
+ 27.67%    3.972      1 Template:Fasteners_Tools_navi/it
+ 18.26%    2.620      2 Template:Docnav/it
+ 17.18%    2.465      1 Template:GuiCommand/it
+ 13.14%    1.886      2 Template:Button
+ 10.19%    1.462      1 Template:Caption
+  8.86%    1.271      1 Template:Navigation_menu_2
+  7.90%    1.134      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354667-0!canonical and timestamp 20260112123913 and revision id 1737464. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354667-0!canonical and timestamp 20260118041520 and revision id 1737464. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
