Updated page Introduction to Python/cs

--- a/wiki/cs/Introduction_to_Python.html
+++ b/wiki/cs/Introduction_to_Python.html
@@ -352,12 +352,12 @@
 <ul><li><b>FreeCAD scripting:</b> <a href="../index.php?title=Python/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python/cs (page does not exist)">Python</a>, <a class="mw-selflink selflink">Introduction to Python</a>, <a href="../cs/Python_scripting_tutorial.html" title="Python scripting tutorial/cs">Python scripting tutorial</a>, <a href="../cs/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/cs">FreeCAD Scripting Basics</a></li></ul>
 <hr>
 <ul><li><b>Modules:</b> <a href="../index.php?title=Builtin_modules/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Builtin modules/cs (page does not exist)">Builtin modules</a>, <a href="../cs/Units.html" title="Units/cs">Units</a>, <a href="../cs/Quantity.html" title="Quantity/cs">Quantity</a></li>
-<li><b>Workbenches:</b> <a href="../index.php?title=Workbench_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Workbench creation/cs (page does not exist)">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
+<li><b>Workbenches:</b> <a href="../cs/Workbench_creation.html" title="Workbench creation/cs">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
 <li><b>Meshes and Parts:</b> <a href="../cs/Mesh_Scripting.html" title="Mesh Scripting/cs">Mesh Scripting</a>, <a href="../cs/Topological_data_scripting.html" title="Topological data scripting/cs">Topological data scripting</a>, <a href="../cs/Mesh_to_Part.html" title="Mesh to Part/cs">Mesh to Part</a>, <a href="../cs/PythonOCC.html" title="PythonOCC/cs">PythonOCC</a></li></ul>
 <hr>
 <ul><li><b>Parametric objects:</b> <a href="../cs/Scripted_objects.html" title="Scripted objects/cs">Scripted objects</a>, <a href="../index.php?title=Viewprovider/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Viewprovider/cs (page does not exist)">Viewproviders</a> <small>(<a href="../index.php?title=Custom_icon_in_tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Custom icon in tree view/cs (page does not exist)">Custom icon in tree view</a>)</small></li>
 <li><b>Scenegraph:</b> <a href="../cs/Scenegraph.html" title="Scenegraph/cs">Coin (Inventor) scenegraph</a>, <a href="../cs/Pivy.html" title="Pivy/cs">Pivy</a></li>
-<li><b>Graphical interface:</b> <a href="../index.php?title=Interface_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface creation/cs (page does not exist)">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
+<li><b>Graphical interface:</b> <a href="../cs/Interface_creation.html" title="Interface creation/cs">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
 <li><b>Macros:</b> <a href="../cs/Macros.html" title="Macros/cs">Macros</a>, <a href="../cs/How_to_install_macros.html" title="How to install macros/cs">How to install macros</a></li>
 <li><b>Embedding:</b> <a href="../cs/Embedding_FreeCAD.html" title="Embedding FreeCAD/cs">Embedding FreeCAD</a>, <a href="../cs/Embedding_FreeCADGui.html" title="Embedding FreeCADGui/cs">Embedding FreeCADGui</a></li></ul>
 <hr>
@@ -367,12 +367,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111235904
+Cached time: 20260118050014
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.176 seconds
+CPU time usage: 0.185 seconds
+Real time usage: 0.256 seconds
 Preprocessor visited node count: 1473/1000000
 Post&#8208;expand include size: 17390/2097152 bytes
 Template argument size: 5832/2097152 bytes
@@ -383,19 +383,19 @@ Unstrip post&#8208;expand size: 27143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.230      1 -total
- 19.98%   11.433     45 Template:Code
- 18.07%   10.341      1 Template:Powerdocnavi/cs
- 12.87%    7.367     15 Template:FileName
- 11.74%    6.716      9 Template:Top
-  6.02%    3.447     89 Template:Incode
-  4.78%    2.737      1 Template:Navigation_menu_2
-  3.59%    2.053      2 Template:Docnav
-  2.95%    1.691      1 Template:VersionPlus
-  2.61%    1.492      1 Template:TOCright
+100.00%   65.648      1 -total
+ 23.48%   15.415     45 Template:Code
+ 13.79%    9.050      1 Template:Powerdocnavi/cs
+  8.59%    5.641     89 Template:Incode
+  7.12%    4.674      2 Template:Docnav
+  6.57%    4.315      9 Template:Top
+  5.94%    3.901      1 Template:Navigation_menu_2
+  4.63%    3.039      1 Template:MenuCommand
+  4.22%    2.770      1 Template:Caption
+  3.38%    2.217      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32637-0!canonical and timestamp 20260111235904 and revision id 1736781. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32637-0!canonical and timestamp 20260118050014 and revision id 1736781. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
