--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -100,12 +100,12 @@ BOLTS
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116165112
+Cached time: 20260118050020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
-Real time usage: 0.063 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
@@ -116,12 +116,12 @@ Unstrip post&#8208;expand size: 1283/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.194      1 -total
- 67.02%    4.151      1 Template:Macro/it
- 31.21%    1.933      1 Template:Caption
+100.00%    3.946      1 -total
+ 51.65%    2.038      1 Template:Caption
+ 46.40%    1.831      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116165112 and revision id 1739142. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260118050020 and revision id 1739142. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
