Updated page Macro FlattenWire3Points/it

--- a/wiki/it/Macro_FlattenWire3Points.html
+++ b/wiki/it/Macro_FlattenWire3Points.html
@@ -116,12 +116,12 @@ Wire appiattita su piano da 3 punti
     sel.Object.Points = points</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113165112
+Cached time: 20260118050038
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.023 seconds
-Real time usage: 0.038 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.082 seconds
 Preprocessor visited node count: 83/1000000
 Post&#8208;expand include size: 2030/2097152 bytes
 Template argument size: 1614/2097152 bytes
@@ -132,12 +132,12 @@ Unstrip post&#8208;expand size: 2379/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.105      1 -total
- 59.21%    3.615      1 Template:Macro/it
- 39.23%    2.395      1 Template:MacroCode
+100.00%    6.952      1 -total
+ 51.51%    3.581      1 Template:Macro/it
+ 46.33%    3.221      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260113165112 and revision id 1737887. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64732-0!canonical and timestamp 20260118050038 and revision id 1737887. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
