Updated page Macro at Startup/it

--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -126,12 +126,12 @@ Ora la macro &egrave; pronta per essere integrata nell'avvio di FreeCAD.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116105056
+Cached time: 20260118050058
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
@@ -142,14 +142,14 @@ Unstrip post&#8208;expand size: 6966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.326      1 -total
- 63.84%    8.507      1 Template:Powerdocnavi/it
- 39.26%    5.232      1 Template:Navigation_menu_2
- 19.55%    2.605      3 Template:Code
- 13.30%    1.773      1 Template:TOCright
+100.00%   12.103      1 -total
+ 59.33%    7.181      1 Template:Powerdocnavi/it
+ 23.79%    2.879      3 Template:Code
+ 22.31%    2.700      1 Template:Navigation_menu_2
+ 12.53%    1.517      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116105055 and revision id 1739081. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260118050058 and revision id 1739081. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
