Updated page Pivy/cs

--- a/wiki/cs/Pivy.html
+++ b/wiki/cs/Pivy.html
@@ -206,12 +206,12 @@ See also a <a href="../Code_snippets.html#Observe_mouse_events_in_the_3D_viewer_
 <ul><li><b>FreeCAD scripting:</b> <a href="../index.php?title=Python/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python/cs (page does not exist)">Python</a>, <a href="../cs/Introduction_to_Python.html" title="Introduction to Python/cs">Introduction to Python</a>, <a href="../cs/Python_scripting_tutorial.html" title="Python scripting tutorial/cs">Python scripting tutorial</a>, <a href="../cs/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/cs">FreeCAD Scripting Basics</a></li></ul>
 <hr>
 <ul><li><b>Modules:</b> <a href="../index.php?title=Builtin_modules/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Builtin modules/cs (page does not exist)">Builtin modules</a>, <a href="../cs/Units.html" title="Units/cs">Units</a>, <a href="../cs/Quantity.html" title="Quantity/cs">Quantity</a></li>
-<li><b>Workbenches:</b> <a href="../index.php?title=Workbench_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Workbench creation/cs (page does not exist)">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
+<li><b>Workbenches:</b> <a href="../cs/Workbench_creation.html" title="Workbench creation/cs">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
 <li><b>Meshes and Parts:</b> <a href="../cs/Mesh_Scripting.html" title="Mesh Scripting/cs">Mesh Scripting</a>, <a href="../cs/Topological_data_scripting.html" title="Topological data scripting/cs">Topological data scripting</a>, <a href="../cs/Mesh_to_Part.html" title="Mesh to Part/cs">Mesh to Part</a>, <a href="../cs/PythonOCC.html" title="PythonOCC/cs">PythonOCC</a></li></ul>
 <hr>
 <ul><li><b>Parametric objects:</b> <a href="../cs/Scripted_objects.html" title="Scripted objects/cs">Scripted objects</a>, <a href="../index.php?title=Viewprovider/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Viewprovider/cs (page does not exist)">Viewproviders</a> <small>(<a href="../index.php?title=Custom_icon_in_tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Custom icon in tree view/cs (page does not exist)">Custom icon in tree view</a>)</small></li>
 <li><b>Scenegraph:</b> <a href="../cs/Scenegraph.html" title="Scenegraph/cs">Coin (Inventor) scenegraph</a>, <a class="mw-selflink selflink">Pivy</a></li>
-<li><b>Graphical interface:</b> <a href="../index.php?title=Interface_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface creation/cs (page does not exist)">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
+<li><b>Graphical interface:</b> <a href="../cs/Interface_creation.html" title="Interface creation/cs">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
 <li><b>Macros:</b> <a href="../cs/Macros.html" title="Macros/cs">Macros</a>, <a href="../cs/How_to_install_macros.html" title="How to install macros/cs">How to install macros</a></li>
 <li><b>Embedding:</b> <a href="../cs/Embedding_FreeCAD.html" title="Embedding FreeCAD/cs">Embedding FreeCAD</a>, <a href="../cs/Embedding_FreeCADGui.html" title="Embedding FreeCADGui/cs">Embedding FreeCADGui</a></li></ul>
 <hr>
@@ -221,12 +221,12 @@ See also a <a href="../Code_snippets.html#Observe_mouse_events_in_the_3D_viewer_
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112000406
+Cached time: 20260118050122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.193 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 364/1000000
 Post&#8208;expand include size: 8578/2097152 bytes
 Template argument size: 3746/2097152 bytes
@@ -237,19 +237,19 @@ Unstrip post&#8208;expand size: 12291/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.771      1 -total
- 32.41%   21.318     12 Template:Code
- 17.45%   11.477      1 Template:Powerdocnavi/cs
- 11.87%    7.807      3 Template:Top
-  9.46%    6.223      3 Template:Incode
-  7.54%    4.957      1 Template:Docnav
-  7.35%    4.831      1 Template:TOCright
-  6.76%    4.447      1 Template:Navigation_menu_2
-  5.33%    3.505      1 Template:Emphasis
-  4.92%    3.234      1 Template:Docnav/cs
+100.00%   23.549      1 -total
+ 22.20%    5.227     12 Template:Code
+ 17.69%    4.166      1 Template:Powerdocnavi/cs
+ 16.57%    3.902      3 Template:Top
+ 10.20%    2.401      1 Template:Docnav/cs
+  9.92%    2.336      1 Template:Docnav
+  8.01%    1.886      1 Template:Navigation_menu_2
+  6.23%    1.468      3 Template:Incode
+  5.56%    1.309      1 Template:TOCright
+  4.68%    1.103      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33552-0!canonical and timestamp 20260112000406 and revision id 1736793. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:33552-0!canonical and timestamp 20260118050122 and revision id 1736793. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
